能跑起来了

--- a/web/src/main/webapp/WEB-INF/ftl/admin/system/theme.html
+++ b/web/src/main/webapp/WEB-INF/ftl/admin/system/theme.html
@@ -124,7 +124,7 @@
                 <li class="header">主面板</li>
                 [@menustag id=1]
                 [#list list as item]
-                [@menu item "1,2,29"]
+                [@menu item "1,2,10"]
                 [/@menu]
                 [/#list]
                 [/@menustag]
@@ -160,7 +160,7 @@
                                 <span id="${item.id}" class="more-details" id="SimpleHome-action" [#if  item.id != webConfig.theme]style="display: none"[/#if]>当前主题</span>
                                 <i></i>
                                 <div class="box-theme-title">
-                                    <h2>${item.name}</h2>
+                                    <h2>${item.name!"未知"}</h2>
                                     <!--<button class="btn btn-default pull-right">启用</button>-->
                                     <button class="btn btn-success pull-right" onclick="setTheme('${item.id}')">启用</button>
                                 </div>
